# libCMakeConfig

./: .gitignore  LICENSE.md  README.md  cleanup  configcmake  libconfig.cmake  run_test
test/: CMakeLists.txt  main.cpp
test/files/: Alib.cpp  Alib.hpp  Blib.cpp  Blib.hpp  cleanup
